--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -950,15 +950,19 @@ table .action-btn i {
     cursor: pointer;
 }
 
-table .action-btn i:nth-of-type(1) {
+table .action-btn .fa-rotate-right {
+    color: var(--green);
+}
+
+table .action-btn .fa-eye {
     color: var(--blue);
 }
 
-table .action-btn i:nth-of-type(2) {
+table .action-btn .fa-pen-to-square {
     color: var(--orange);
 }
 
-table .action-btn i:nth-of-type(3) {
+table .action-btn button .fa-box-archive, table .action-btn button .fa-trash-can {
     color: var(--red);
 }
 
